fixed styling on small screens

--- a/src/components/Header.css
+++ b/src/components/Header.css
@@ -11,7 +11,7 @@
   width: 100%;
   background-color: var(--header);
   color: white;
-  padding: 10px 40px;
+  padding: 1% 4%;
   box-sizing: border-box;
 }
 
